# robot_motion_planning

./: README.md
birrt_star_algorithm/: CMakeLists.txt  package.xml
birrt_star_algorithm/include/birrt_star_algorithm/: birrt_star.h
birrt_star_algorithm/src/: birrt_star.cpp  run_birrt_star_algorithm_lbr_only.cpp  run_birrt_star_algorithm_omnirob_base.cpp  run_birrt_star_algorithm_omnirob_lbr.cpp  run_birrt_star_algorithm_pr2_base.cpp  run_birrt_star_algorithm_pr2_base_arm.cpp  run_birrt_star_algorithm_robotino.cpp
planner_data_structures/: CMakeLists.txt  package.xml
planner_data_structures/include/planner_data_structures/: data_structs.h  data_structs.h~
planner_data_structures/src/: data_structs.cpp
planner_msgs/: CMakeLists.txt  package.xml
planner_msgs/msg/: array1d_double.msg  array2d_double.msg
planner_msgs/srv/: execute_motion_plan.srv  generate_start_goal_config.srv  planning_scene_info.srv  reset_planner_to_default.srv  run_planner_config_file.srv  run_planner_configs.srv  run_planner_map_goal_config.srv  run_planner_map_goal_pose.srv  run_planner_poses.srv  run_planner_start_config_goal_pose.srv  set_edge_costs.srv
planner_param_config/: CMakeLists.txt  package.xml
planner_param_config/planner_config/: planner_parameters_omnirob.yaml  planner_parameters_omnirob_neurobots_demo.yaml  planner_parameters_omnirob_robotino.yaml  planner_parameters_pr2.yaml  planner_parameters_robotino.yaml
planner_statistics/: CMakeLists.txt  package.xml
planner_statistics/data/bi_informed_rrt_star/: block_scene_cost_evolution_run_0.txt  block_scene_ee_trajectory_run_0.txt  block_scene_joint_trajectory_run_0.txt  block_scene_planner_statistics_run_0.txt  empty_scene_cost_evolution_run_0.txt  empty_scene_ee_trajectory_run_0.txt  empty_scene_joint_trajectory_run_0.txt  empty_scene_planner_statistics_run_0.txt  three_gates_scene_cost_evolution_run_0.txt  three_gates_scene_ee_trajectory_run_0.txt  three_gates_scene_joint_trajectory_run_0.txt  three_gates_scene_planner_statistics_run_0.txt  two_rooms_scene_cost_evolution_run_0.txt  (+3 more)
planner_statistics/figures/: cost_evolution_block_scene.fig  cost_evolution_block_scene2.fig
planner_statistics/files/: QuatHProd.m  block_world_plot_cost_evolution_data_average_of_runs.m  block_world_plot_cost_evolution_data_single_runs.m  block_world_plot_solution_available_vs_runtime.m  block_world_plot_success_rate_vs_desired_solution_cost.m  block_world_plot_time_required_vs_desired_solution_cost.m  glass_world_plot_cost_evolution_data_average_of_runs.m  glass_world_plot_cost_evolution_data_single_runs.m  glass_world_plot_solution_available_vs_runtime.m  glass_world_plot_success_rate_vs_desired_solution_cost.m  glass_world_plot_time_required_vs_desired_solution_cost.m  gridDemo.m  gridLegend.m  plot_ee_trajectory_data.m
planner_statistics/plots/: block_avg_cost_evolution_planner_comparison.eps  block_desired_solution_cost_vs_success_rate.eps  block_desired_solution_cost_vs_time_required.eps  block_planning_runtime_vs_solution_available.eps  glass_avg_cost_evolution_planner_comparison.eps  glass_desired_solution_cost_vs_time_required.eps  glass_planning_runtime_vs_solution_available.eps
planning_heuristics/: CMakeLists.txt  package.xml
planning_heuristics/src/: distance_heuristics.cpp
planning_scenarios/: CMakeLists.txt  README.txt  package.xml
planning_scenarios/Start_Goal_Configurations/: omnirob_lbr_sdh_door_start_goal_config.txt  robotino_robot_block_start_goal_config.txt  robotino_robot_glass_start_goal_config.txt
planning_scenarios/src/: generateStartGoalConfigs.cpp  run_block_scenario.cpp  run_cart_narrow_corridor_scenario.cpp  run_cart_parking_slot_scenario.cpp  run_cart_three_gates_scenario.cpp  run_cart_tunnel_scenario.cpp  run_cart_two_rooms_office_scenario.cpp  run_door_scenario.cpp  run_empty_world_scenario.cpp  run_glass_delivery_scenario.cpp  run_planner_comparison_block_scenario.cpp  run_planner_comparison_glass_scenario.cpp  run_rack_scenario.cpp
planning_server/: CMakeLists.txt  package.xml
planning_server/include/planning_server/: planning_control_center.h  planning_server.h
planning_server/launch/: omnirob_lbr_planning.launch  planning_server.launch
planning_server/src/: base_motion_planning_service.cpp  planning_control_center.cpp  planning_server.cpp  planning_service_node.cpp
planning_world_builder/: CMakeLists.txt  README.txt  package.xml
planning_world_builder/src/: planning_world_builder.cpp
robot_motion_planning/: CMakeLists.txt  package.xml
rrt_star_algorithm/: CMakeLists.txt  package.xml
rrt_star_algorithm/include/rrt_star_algorithm/: rrt_star.h
rrt_star_algorithm/src/: rrt_star.cpp  run_rrt_star_algorithm.cpp
validity_checker/: CMakeLists.txt  package.xml
validity_checker/src/: feasibility_checker.cpp
vrep/v_rep_models/: LBR_SDH_2.ttm  Schunk_SDH2_Hand.ttm
vrep/v_rep_scenes/: lbr_kinect_ros_visual_servoing.ttt  lbr_scene.ttt  lbr_sdh_scene.ttt  omnirob_lbr_kinect.ttt  omnirob_lbr_scene.ttt  omnirob_lbr_sdh_scene.ttt  omnirob_lbr_sdh_scene_with_shelf.ttt  robotino_scene.ttt  schunk_sdh2.ttt
vrep/vrep/: CMakeLists.txt  package.xml
vrep/vrep_common/: CMakeLists.txt  package.xml
vrep/vrep_joy/: CMakeLists.txt  mainpage.dox  package.xml
vrep/vrep_joy/src/: vrep_joy.cpp
vrep/vrep_plugin/: CMakeLists.txt  package.xml
vrep/vrep_plugin/include/: v_repConst.h  v_repLib.h
vrep/vrep_plugin/include/vrep_plugin/: ROS_server.h  ROS_server.h~  vrepSubscriber.h  vrep_plugin.h
vrep/vrep_plugin/src/: ROS_server.cpp  ROS_server.cpp~  luaFunctionDataItem.cpp  v_repLib.cpp  vrepSubscriber.cpp  vrep_plugin.cpp
vrep/vrep_plugin_skeleton/: CMakeLists.txt  package.xml
vrep/vrep_plugin_skeleton/include/: luaFunctionData.h  luaFunctionDataItem.h  v_repTypes.h
vrep/vrep_plugin_skeleton/include/vrep_plugin_skeleton/: ros_server_skeleton.h  vrep_plugin_skeleton.h
vrep/vrep_plugin_skeleton/src/: luaFunctionData.cpp  ros_server_skeleton.cpp  vrep_plugin_skeleton.cpp
vrep/vrep_ros_interface/: CMakeLists.txt  package.xml
vrep/vrep_skeleton_msg_and_srv/: package.xml
(+10 files in other folders)
