<package>
  <name>vrep</name>
  <version>0.0.1</version>
  <description>The vrep metapackage</description>

 
  <maintainer email="burgetf@informatik.uni-freiburg.de">burgetf</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage/> 
  </export>
  
  
  <run_depend>vrep_common</run_depend>
  <run_depend>vrep_plugin</run_depend>
  <run_depend>vrep_plugin_skeleton</run_depend>
  <run_depend>vrep_skeleton_msg_and_srv</run_depend>
  <run_depend>vrep_joy</run_depend>
  
  
</package>