<package>
  <name>vrep_plugin_skeleton</name>
  <description>V-REP plugin Skeleton</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>3.1.2</version>
  <author>Marc</author>
  <license>GPLv3</license>
  <url>http://www.coppeliarobotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrep_skeleton_msg_and_srv</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roslib</run_depend>
</package>


